# waynav

./: .clang-format  .clang-tidy  .gitmodules  AGENTS.md  LICENSE  Makefile  README.md  meson.build  meson_options.txt
.github/workflows/: release.yml
doc/: waynav.1
int/: niri.Dockerfile  run_tests  setup.sh  sway.Dockerfile  teardown.sh
int/lib/: assertions.sh  config.sh  docker.sh  run-nested-niri-smoke.sh  run-waynav-smoke.sh  start-headless-sway.sh
int/testcases/: can-run-overlay-on-headless-sway.test.sh  can-run-overlay-on-nested-niri.test.sh
src/: config.c  grid.c  input.c  log.c  log.h  main.c  overlay.c  waynav.h
tests/: test_config.c  test_grid.c  test_input.c
